--- a/src/DynamoCoreWpf/Properties/Resources.resx
+++ b/src/DynamoCoreWpf/Properties/Resources.resx
@@ -442,6 +442,14 @@
     <value>Run Workflow (F5)</value>
     <comment>Run button tooltip</comment>
   </data>
+  <data name="DynamoViewCancelButton" xml:space="preserve">
+    <value>Cancel</value>
+    <comment>Cancel button</comment>
+  </data>
+  <data name="DynamoViewCancelButtonTooltip" xml:space="preserve">
+    <value>Cancel Execution</value>
+    <comment>Cancel button tooltip</comment>
+  </data>
   <data name="DynamoViewSettingMenu" xml:space="preserve">
     <value>_Settings</value>
     <comment>Setting menu</comment>
